--- a/web proje/Anasayfa.html
+++ b/web proje/Anasayfa.html
@@ -29,7 +29,7 @@
 	</div>
 	
 	<div class="col-lg-9">
-	<div class="banner"><p>Kişisel Web Sayfama Hoşgeldiniz..</p></div>
+	<div class="banner"><p>Kişisel Web Sayfama Hoşgeldiniz...</p></div>
 	</div>
 	
 	
